test(rpc): use assertInstanceOf() and getFirst() for Success case [REVIEW9-7.1]
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>